# transformers-knn-adapter

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/git-commit/: SKILL.md
.agents/skills/knn-cli-training/: SKILL.md
.agents/skills/test-runner/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  release-please.yml  tests.yml
configs/: freeze_schedule.backbone_then_unfreeze.json
scripts/: dogfaces_smoke.py  plot_gaussian_directions.py  pypi_inference_smoke.py
src/transformers_knn_adapter/: __init__.py  dinov2_arcface.py  freeze_schedule_callback.py  knn_callback.py  knn_image_pipeline.py
tests/: __init__.py  _test_utils.py  test_dinov2_arcface_integration.py  test_dinov2_arcface_model.py  test_dinov2_arcface_trainer_integration.py  test_dogfaces_smoke_integration.py  test_dogfaces_smoke_split.py  test_knn_callback.py  test_knn_pipeline.py
