[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "transformers_knn_adapter"
version = "0.2.0"
description = "Hugging Face Transformers image embedding adapter with a scikit-learn KNN classification head."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "transformers-knn-adapter contributors" }]
dependencies = [
  "transformers",
  "datasets",
  "scikit-learn",
  "numpy",
  "torch",
  "pillow",
  "joblib",
  "tqdm",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transformers_knn_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
